<resources>
    <string name="app_name">BulletinBoard</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_cat1">Обьявления</string>
    <string name="app_my_ads">Мои обьявления</string>
    <string name="app_car">Машины</string>
    <string name="app_pc">Компьютеры</string>
    <string name="app_smartphone">Смартфоны</string>
    <string name="app_dm">Бытовая Техника</string>
    <string name="app_fav">Избранные</string>
    <string name="app_def">Разное</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sigh_up">Регистрация</string>
    <string name="ac_sigh_in">Вход</string>
    <string name="ac_sigh_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегестрируйтесь! </string>
    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="email_reset_email">Email reset was sent</string>
    <string name="dialog_email_reset_email">Для восстановления пароля укажите email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегестрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегестрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_error">Не удалось отправить email для потдверждения</string>
    <string name="send_verification_done">На Ваш email была отправлена ссылка для подтверждения Вашего аккаунта </string>
    <!-- Sign Dialog -->
    <string name="link_done">Email успешно подключен к Google аккаунту</string>
    <string name="enter_to_gmail">Войдите по email</string>
    <!-- Edit Activity -->
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>
    <string name="tel">*Номер телефона</string>
    <string name="email">*email</string>
    <string name="category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="title">*Заголовок</string>
    <string name="description">Описание</string>
    <string name="publish">Опубликовать</string>
    <string name="filter">Применить фильтр</string>
    <string name="clear">Очистить фильтр</string>
    <string name="publish_time">Время публикации</string>


</resources>